--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15096,28 +15096,8 @@ video {
   -moz-osx-font-smoothing: auto;
 }
 
-.tracking-tighter {
-  letter-spacing: -0.05em;
-}
-
-.tracking-tight {
-  letter-spacing: -0.025em;
-}
-
-.tracking-normal {
-  letter-spacing: 0;
-}
-
-.tracking-wide {
-  letter-spacing: 0.025em;
-}
-
-.tracking-wider {
-  letter-spacing: 0.05em;
-}
-
-.tracking-widest {
-  letter-spacing: 0.1em;
+.tracking-large {
+  letter-spacing: .75em;
 }
 
 .select-none {
@@ -32356,28 +32336,8 @@ video {
     -moz-osx-font-smoothing: auto;
   }
 
-  .sm\:tracking-tighter {
-    letter-spacing: -0.05em;
-  }
-
-  .sm\:tracking-tight {
-    letter-spacing: -0.025em;
-  }
-
-  .sm\:tracking-normal {
-    letter-spacing: 0;
-  }
-
-  .sm\:tracking-wide {
-    letter-spacing: 0.025em;
-  }
-
-  .sm\:tracking-wider {
-    letter-spacing: 0.05em;
-  }
-
-  .sm\:tracking-widest {
-    letter-spacing: 0.1em;
+  .sm\:tracking-large {
+    letter-spacing: .75em;
   }
 
   .sm\:select-none {
@@ -49617,28 +49577,8 @@ video {
     -moz-osx-font-smoothing: auto;
   }
 
-  .md\:tracking-tighter {
-    letter-spacing: -0.05em;
-  }
-
-  .md\:tracking-tight {
-    letter-spacing: -0.025em;
-  }
-
-  .md\:tracking-normal {
-    letter-spacing: 0;
-  }
-
-  .md\:tracking-wide {
-    letter-spacing: 0.025em;
-  }
-
-  .md\:tracking-wider {
-    letter-spacing: 0.05em;
-  }
-
-  .md\:tracking-widest {
-    letter-spacing: 0.1em;
+  .md\:tracking-large {
+    letter-spacing: .75em;
   }
 
   .md\:select-none {
@@ -66878,28 +66818,8 @@ video {
     -moz-osx-font-smoothing: auto;
   }
 
-  .lg\:tracking-tighter {
-    letter-spacing: -0.05em;
-  }
-
-  .lg\:tracking-tight {
-    letter-spacing: -0.025em;
-  }
-
-  .lg\:tracking-normal {
-    letter-spacing: 0;
-  }
-
-  .lg\:tracking-wide {
-    letter-spacing: 0.025em;
-  }
-
-  .lg\:tracking-wider {
-    letter-spacing: 0.05em;
-  }
-
-  .lg\:tracking-widest {
-    letter-spacing: 0.1em;
+  .lg\:tracking-large {
+    letter-spacing: .75em;
   }
 
   .lg\:select-none {
@@ -84139,28 +84059,8 @@ video {
     -moz-osx-font-smoothing: auto;
   }
 
-  .xl\:tracking-tighter {
-    letter-spacing: -0.05em;
-  }
-
-  .xl\:tracking-tight {
-    letter-spacing: -0.025em;
-  }
-
-  .xl\:tracking-normal {
-    letter-spacing: 0;
-  }
-
-  .xl\:tracking-wide {
-    letter-spacing: 0.025em;
-  }
-
-  .xl\:tracking-wider {
-    letter-spacing: 0.05em;
-  }
-
-  .xl\:tracking-widest {
-    letter-spacing: 0.1em;
+  .xl\:tracking-large {
+    letter-spacing: .75em;
   }
 
   .xl\:select-none {
