--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6171,92 +6171,96 @@ video {
   font-weight: 900;
 }
 
-.h-0 {
-  height: 0;
+.h-custom-17 {
+  height: 17rem;
 }
 
-.h-1 {
-  height: 0.25rem;
+.h-custom-18 {
+  height: 18rem;
 }
 
-.h-2 {
-  height: 0.5rem;
+.h-custom-20 {
+  height: 20rem;
 }
 
-.h-3 {
-  height: 0.75rem;
+.h-custom-24 {
+  height: 24rem;
 }
 
-.h-4 {
-  height: 1rem;
+.h-custom-26 {
+  height: 26rem;
 }
 
-.h-5 {
-  height: 1.25rem;
+.h-custom-28 {
+  height: 28rem;
 }
 
-.h-6 {
-  height: 1.5rem;
+.h-custom-30 {
+  height: 30rem;
 }
 
-.h-8 {
-  height: 2rem;
+.h-custom-32 {
+  height: 32rem;
 }
 
-.h-10 {
-  height: 2.5rem;
+.h-custom-34 {
+  height: 34rem;
 }
 
-.h-12 {
-  height: 3rem;
+.h-custom-36 {
+  height: 36rem;
 }
 
-.h-16 {
-  height: 4rem;
+.h-custom-38 {
+  height: 38rem;
 }
 
-.h-20 {
-  height: 5rem;
+.h-custom-40 {
+  height: 40rem;
 }
 
-.h-24 {
-  height: 6rem;
+.h-pixels-100 {
+  height: 100px;
 }
 
-.h-32 {
-  height: 8rem;
+.h-pixels-150 {
+  height: 150px;
 }
 
-.h-40 {
-  height: 10rem;
+.h-pixels-200 {
+  height: 200px;
 }
 
-.h-48 {
-  height: 12rem;
+.h-pixels-250 {
+  height: 250px;
 }
 
-.h-56 {
-  height: 14rem;
+.h-pixels-300 {
+  height: 300px;
 }
 
-.h-64 {
-  height: 16rem;
+.h-pixels-350 {
+  height: 350px;
 }
 
-.h-auto {
-  height: auto;
+.h-pixels-400 {
+  height: 400px;
 }
 
-.h-px {
-  height: 1px;
+.h-pixels-450 {
+  height: 450px;
 }
 
-.h-full {
-  height: 100%;
+.h-pixels-500 {
+  height: 500px;
 }
 
-.h-screen {
-  height: 100vh;
+.h-pixels-550 {
+  height: 550px;
+}
+
+.h-pixels-600 {
+  height: 600px;
 }
 
 .text-xs {
@@ -13047,11 +13051,11 @@ video {
   left: 0;
 }
 
-.inset-auto {
-  top: auto;
-  right: auto;
-  bottom: auto;
-  left: auto;
+.inset-1\/2 {
+  top: 50%;
+  right: 50%;
+  bottom: 50%;
+  left: 50%;
 }
 
 .inset-y-0 {
@@ -13064,14 +13068,14 @@ video {
   left: 0;
 }
 
-.inset-y-auto {
-  top: auto;
-  bottom: auto;
+.inset-y-1\/2 {
+  top: 50%;
+  bottom: 50%;
 }
 
-.inset-x-auto {
-  right: auto;
-  left: auto;
+.inset-x-1\/2 {
+  right: 50%;
+  left: 50%;
 }
 
 .top-0 {
@@ -13090,20 +13094,20 @@ video {
   left: 0;
 }
 
-.top-auto {
-  top: auto;
+.top-1\/2 {
+  top: 50%;
 }
 
-.right-auto {
-  right: auto;
+.right-1\/2 {
+  right: 50%;
 }
 
-.bottom-auto {
-  bottom: auto;
+.bottom-1\/2 {
+  bottom: 50%;
 }
 
-.left-auto {
-  left: auto;
+.left-1\/2 {
+  left: 50%;
 }
 
 .resize-none {
@@ -17858,6 +17862,11 @@ video {
 
 .delay-1000 {
   transition-delay: 1000ms;
+}
+
+.swiper-container {
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 @media (min-width: 640px) {
@@ -23411,92 +23420,96 @@ video {
     font-weight: 900;
   }
 
-  .sm\:h-0 {
-    height: 0;
+  .sm\:h-custom-17 {
+    height: 17rem;
   }
 
-  .sm\:h-1 {
-    height: 0.25rem;
+  .sm\:h-custom-18 {
+    height: 18rem;
   }
 
-  .sm\:h-2 {
-    height: 0.5rem;
+  .sm\:h-custom-20 {
+    height: 20rem;
   }
 
-  .sm\:h-3 {
-    height: 0.75rem;
+  .sm\:h-custom-24 {
+    height: 24rem;
   }
 
-  .sm\:h-4 {
-    height: 1rem;
+  .sm\:h-custom-26 {
+    height: 26rem;
   }
 
-  .sm\:h-5 {
-    height: 1.25rem;
+  .sm\:h-custom-28 {
+    height: 28rem;
   }
 
-  .sm\:h-6 {
-    height: 1.5rem;
+  .sm\:h-custom-30 {
+    height: 30rem;
   }
 
-  .sm\:h-8 {
-    height: 2rem;
+  .sm\:h-custom-32 {
+    height: 32rem;
   }
 
-  .sm\:h-10 {
-    height: 2.5rem;
+  .sm\:h-custom-34 {
+    height: 34rem;
   }
 
-  .sm\:h-12 {
-    height: 3rem;
+  .sm\:h-custom-36 {
+    height: 36rem;
   }
 
-  .sm\:h-16 {
-    height: 4rem;
+  .sm\:h-custom-38 {
+    height: 38rem;
   }
 
-  .sm\:h-20 {
-    height: 5rem;
+  .sm\:h-custom-40 {
+    height: 40rem;
   }
 
-  .sm\:h-24 {
-    height: 6rem;
+  .sm\:h-pixels-100 {
+    height: 100px;
   }
 
-  .sm\:h-32 {
-    height: 8rem;
+  .sm\:h-pixels-150 {
+    height: 150px;
   }
 
-  .sm\:h-40 {
-    height: 10rem;
+  .sm\:h-pixels-200 {
+    height: 200px;
   }
 
-  .sm\:h-48 {
-    height: 12rem;
+  .sm\:h-pixels-250 {
+    height: 250px;
   }
 
-  .sm\:h-56 {
-    height: 14rem;
+  .sm\:h-pixels-300 {
+    height: 300px;
   }
 
-  .sm\:h-64 {
-    height: 16rem;
+  .sm\:h-pixels-350 {
+    height: 350px;
   }
 
-  .sm\:h-auto {
-    height: auto;
+  .sm\:h-pixels-400 {
+    height: 400px;
   }
 
-  .sm\:h-px {
-    height: 1px;
+  .sm\:h-pixels-450 {
+    height: 450px;
   }
 
-  .sm\:h-full {
-    height: 100%;
+  .sm\:h-pixels-500 {
+    height: 500px;
   }
 
-  .sm\:h-screen {
-    height: 100vh;
+  .sm\:h-pixels-550 {
+    height: 550px;
+  }
+
+  .sm\:h-pixels-600 {
+    height: 600px;
   }
 
   .sm\:text-xs {
@@ -30287,11 +30300,11 @@ video {
     left: 0;
   }
 
-  .sm\:inset-auto {
-    top: auto;
-    right: auto;
-    bottom: auto;
-    left: auto;
+  .sm\:inset-1\/2 {
+    top: 50%;
+    right: 50%;
+    bottom: 50%;
+    left: 50%;
   }
 
   .sm\:inset-y-0 {
@@ -30304,14 +30317,14 @@ video {
     left: 0;
   }
 
-  .sm\:inset-y-auto {
-    top: auto;
-    bottom: auto;
+  .sm\:inset-y-1\/2 {
+    top: 50%;
+    bottom: 50%;
   }
 
-  .sm\:inset-x-auto {
-    right: auto;
-    left: auto;
+  .sm\:inset-x-1\/2 {
+    right: 50%;
+    left: 50%;
   }
 
   .sm\:top-0 {
@@ -30330,20 +30343,20 @@ video {
     left: 0;
   }
 
-  .sm\:top-auto {
-    top: auto;
+  .sm\:top-1\/2 {
+    top: 50%;
   }
 
-  .sm\:right-auto {
-    right: auto;
+  .sm\:right-1\/2 {
+    right: 50%;
   }
 
-  .sm\:bottom-auto {
-    bottom: auto;
+  .sm\:bottom-1\/2 {
+    bottom: 50%;
   }
 
-  .sm\:left-auto {
-    left: auto;
+  .sm\:left-1\/2 {
+    left: 50%;
   }
 
   .sm\:resize-none {
@@ -40652,92 +40665,96 @@ video {
     font-weight: 900;
   }
 
-  .md\:h-0 {
-    height: 0;
+  .md\:h-custom-17 {
+    height: 17rem;
   }
 
-  .md\:h-1 {
-    height: 0.25rem;
+  .md\:h-custom-18 {
+    height: 18rem;
   }
 
-  .md\:h-2 {
-    height: 0.5rem;
+  .md\:h-custom-20 {
+    height: 20rem;
   }
 
-  .md\:h-3 {
-    height: 0.75rem;
+  .md\:h-custom-24 {
+    height: 24rem;
   }
 
-  .md\:h-4 {
-    height: 1rem;
+  .md\:h-custom-26 {
+    height: 26rem;
   }
 
-  .md\:h-5 {
-    height: 1.25rem;
+  .md\:h-custom-28 {
+    height: 28rem;
   }
 
-  .md\:h-6 {
-    height: 1.5rem;
+  .md\:h-custom-30 {
+    height: 30rem;
   }
 
-  .md\:h-8 {
-    height: 2rem;
+  .md\:h-custom-32 {
+    height: 32rem;
   }
 
-  .md\:h-10 {
-    height: 2.5rem;
+  .md\:h-custom-34 {
+    height: 34rem;
   }
 
-  .md\:h-12 {
-    height: 3rem;
+  .md\:h-custom-36 {
+    height: 36rem;
   }
 
-  .md\:h-16 {
-    height: 4rem;
+  .md\:h-custom-38 {
+    height: 38rem;
   }
 
-  .md\:h-20 {
-    height: 5rem;
+  .md\:h-custom-40 {
+    height: 40rem;
   }
 
-  .md\:h-24 {
-    height: 6rem;
+  .md\:h-pixels-100 {
+    height: 100px;
   }
 
-  .md\:h-32 {
-    height: 8rem;
+  .md\:h-pixels-150 {
+    height: 150px;
   }
 
-  .md\:h-40 {
-    height: 10rem;
+  .md\:h-pixels-200 {
+    height: 200px;
   }
 
-  .md\:h-48 {
-    height: 12rem;
+  .md\:h-pixels-250 {
+    height: 250px;
   }
 
-  .md\:h-56 {
-    height: 14rem;
+  .md\:h-pixels-300 {
+    height: 300px;
   }
 
-  .md\:h-64 {
-    height: 16rem;
+  .md\:h-pixels-350 {
+    height: 350px;
   }
 
-  .md\:h-auto {
-    height: auto;
+  .md\:h-pixels-400 {
+    height: 400px;
   }
 
-  .md\:h-px {
-    height: 1px;
+  .md\:h-pixels-450 {
+    height: 450px;
   }
 
-  .md\:h-full {
-    height: 100%;
+  .md\:h-pixels-500 {
+    height: 500px;
   }
 
-  .md\:h-screen {
-    height: 100vh;
+  .md\:h-pixels-550 {
+    height: 550px;
+  }
+
+  .md\:h-pixels-600 {
+    height: 600px;
   }
 
   .md\:text-xs {
@@ -47528,11 +47545,11 @@ video {
     left: 0;
   }
 
-  .md\:inset-auto {
-    top: auto;
-    right: auto;
-    bottom: auto;
-    left: auto;
+  .md\:inset-1\/2 {
+    top: 50%;
+    right: 50%;
+    bottom: 50%;
+    left: 50%;
   }
 
   .md\:inset-y-0 {
@@ -47545,14 +47562,14 @@ video {
     left: 0;
   }
 
-  .md\:inset-y-auto {
-    top: auto;
-    bottom: auto;
+  .md\:inset-y-1\/2 {
+    top: 50%;
+    bottom: 50%;
   }
 
-  .md\:inset-x-auto {
-    right: auto;
-    left: auto;
+  .md\:inset-x-1\/2 {
+    right: 50%;
+    left: 50%;
   }
 
   .md\:top-0 {
@@ -47571,20 +47588,20 @@ video {
     left: 0;
   }
 
-  .md\:top-auto {
-    top: auto;
+  .md\:top-1\/2 {
+    top: 50%;
   }
 
-  .md\:right-auto {
-    right: auto;
+  .md\:right-1\/2 {
+    right: 50%;
   }
 
-  .md\:bottom-auto {
-    bottom: auto;
+  .md\:bottom-1\/2 {
+    bottom: 50%;
   }
 
-  .md\:left-auto {
-    left: auto;
+  .md\:left-1\/2 {
+    left: 50%;
   }
 
   .md\:resize-none {
@@ -57893,92 +57910,96 @@ video {
     font-weight: 900;
   }
 
-  .lg\:h-0 {
-    height: 0;
+  .lg\:h-custom-17 {
+    height: 17rem;
   }
 
-  .lg\:h-1 {
-    height: 0.25rem;
+  .lg\:h-custom-18 {
+    height: 18rem;
   }
 
-  .lg\:h-2 {
-    height: 0.5rem;
+  .lg\:h-custom-20 {
+    height: 20rem;
   }
 
-  .lg\:h-3 {
-    height: 0.75rem;
+  .lg\:h-custom-24 {
+    height: 24rem;
   }
 
-  .lg\:h-4 {
-    height: 1rem;
+  .lg\:h-custom-26 {
+    height: 26rem;
   }
 
-  .lg\:h-5 {
-    height: 1.25rem;
+  .lg\:h-custom-28 {
+    height: 28rem;
   }
 
-  .lg\:h-6 {
-    height: 1.5rem;
+  .lg\:h-custom-30 {
+    height: 30rem;
   }
 
-  .lg\:h-8 {
-    height: 2rem;
+  .lg\:h-custom-32 {
+    height: 32rem;
   }
 
-  .lg\:h-10 {
-    height: 2.5rem;
+  .lg\:h-custom-34 {
+    height: 34rem;
   }
 
-  .lg\:h-12 {
-    height: 3rem;
+  .lg\:h-custom-36 {
+    height: 36rem;
   }
 
-  .lg\:h-16 {
-    height: 4rem;
+  .lg\:h-custom-38 {
+    height: 38rem;
   }
 
-  .lg\:h-20 {
-    height: 5rem;
+  .lg\:h-custom-40 {
+    height: 40rem;
   }
 
-  .lg\:h-24 {
-    height: 6rem;
+  .lg\:h-pixels-100 {
+    height: 100px;
   }
 
-  .lg\:h-32 {
-    height: 8rem;
+  .lg\:h-pixels-150 {
+    height: 150px;
   }
 
-  .lg\:h-40 {
-    height: 10rem;
+  .lg\:h-pixels-200 {
+    height: 200px;
   }
 
-  .lg\:h-48 {
-    height: 12rem;
+  .lg\:h-pixels-250 {
+    height: 250px;
   }
 
-  .lg\:h-56 {
-    height: 14rem;
+  .lg\:h-pixels-300 {
+    height: 300px;
   }
 
-  .lg\:h-64 {
-    height: 16rem;
+  .lg\:h-pixels-350 {
+    height: 350px;
   }
 
-  .lg\:h-auto {
-    height: auto;
+  .lg\:h-pixels-400 {
+    height: 400px;
   }
 
-  .lg\:h-px {
-    height: 1px;
+  .lg\:h-pixels-450 {
+    height: 450px;
   }
 
-  .lg\:h-full {
-    height: 100%;
+  .lg\:h-pixels-500 {
+    height: 500px;
   }
 
-  .lg\:h-screen {
-    height: 100vh;
+  .lg\:h-pixels-550 {
+    height: 550px;
+  }
+
+  .lg\:h-pixels-600 {
+    height: 600px;
   }
 
   .lg\:text-xs {
@@ -64769,11 +64790,11 @@ video {
     left: 0;
   }
 
-  .lg\:inset-auto {
-    top: auto;
-    right: auto;
-    bottom: auto;
-    left: auto;
+  .lg\:inset-1\/2 {
+    top: 50%;
+    right: 50%;
+    bottom: 50%;
+    left: 50%;
   }
 
   .lg\:inset-y-0 {
@@ -64786,14 +64807,14 @@ video {
     left: 0;
   }
 
-  .lg\:inset-y-auto {
-    top: auto;
-    bottom: auto;
+  .lg\:inset-y-1\/2 {
+    top: 50%;
+    bottom: 50%;
   }
 
-  .lg\:inset-x-auto {
-    right: auto;
-    left: auto;
+  .lg\:inset-x-1\/2 {
+    right: 50%;
+    left: 50%;
   }
 
   .lg\:top-0 {
@@ -64812,20 +64833,20 @@ video {
     left: 0;
   }
 
-  .lg\:top-auto {
-    top: auto;
+  .lg\:top-1\/2 {
+    top: 50%;
   }
 
-  .lg\:right-auto {
-    right: auto;
+  .lg\:right-1\/2 {
+    right: 50%;
   }
 
-  .lg\:bottom-auto {
-    bottom: auto;
+  .lg\:bottom-1\/2 {
+    bottom: 50%;
   }
 
-  .lg\:left-auto {
-    left: auto;
+  .lg\:left-1\/2 {
+    left: 50%;
   }
 
   .lg\:resize-none {
@@ -75134,92 +75155,96 @@ video {
     font-weight: 900;
   }
 
-  .xl\:h-0 {
-    height: 0;
+  .xl\:h-custom-17 {
+    height: 17rem;
   }
 
-  .xl\:h-1 {
-    height: 0.25rem;
+  .xl\:h-custom-18 {
+    height: 18rem;
   }
 
-  .xl\:h-2 {
-    height: 0.5rem;
+  .xl\:h-custom-20 {
+    height: 20rem;
   }
 
-  .xl\:h-3 {
-    height: 0.75rem;
+  .xl\:h-custom-24 {
+    height: 24rem;
   }
 
-  .xl\:h-4 {
-    height: 1rem;
+  .xl\:h-custom-26 {
+    height: 26rem;
   }
 
-  .xl\:h-5 {
-    height: 1.25rem;
+  .xl\:h-custom-28 {
+    height: 28rem;
   }
 
-  .xl\:h-6 {
-    height: 1.5rem;
+  .xl\:h-custom-30 {
+    height: 30rem;
   }
 
-  .xl\:h-8 {
-    height: 2rem;
+  .xl\:h-custom-32 {
+    height: 32rem;
   }
 
-  .xl\:h-10 {
-    height: 2.5rem;
+  .xl\:h-custom-34 {
+    height: 34rem;
   }
 
-  .xl\:h-12 {
-    height: 3rem;
+  .xl\:h-custom-36 {
+    height: 36rem;
   }
 
-  .xl\:h-16 {
-    height: 4rem;
+  .xl\:h-custom-38 {
+    height: 38rem;
   }
 
-  .xl\:h-20 {
-    height: 5rem;
+  .xl\:h-custom-40 {
+    height: 40rem;
   }
 
-  .xl\:h-24 {
-    height: 6rem;
+  .xl\:h-pixels-100 {
+    height: 100px;
   }
 
-  .xl\:h-32 {
-    height: 8rem;
+  .xl\:h-pixels-150 {
+    height: 150px;
   }
 
-  .xl\:h-40 {
-    height: 10rem;
+  .xl\:h-pixels-200 {
+    height: 200px;
   }
 
-  .xl\:h-48 {
-    height: 12rem;
+  .xl\:h-pixels-250 {
+    height: 250px;
   }
 
-  .xl\:h-56 {
-    height: 14rem;
+  .xl\:h-pixels-300 {
+    height: 300px;
   }
 
-  .xl\:h-64 {
-    height: 16rem;
+  .xl\:h-pixels-350 {
+    height: 350px;
   }
 
-  .xl\:h-auto {
-    height: auto;
+  .xl\:h-pixels-400 {
+    height: 400px;
   }
 
-  .xl\:h-px {
-    height: 1px;
+  .xl\:h-pixels-450 {
+    height: 450px;
   }
 
-  .xl\:h-full {
-    height: 100%;
+  .xl\:h-pixels-500 {
+    height: 500px;
   }
 
-  .xl\:h-screen {
-    height: 100vh;
+  .xl\:h-pixels-550 {
+    height: 550px;
+  }
+
+  .xl\:h-pixels-600 {
+    height: 600px;
   }
 
   .xl\:text-xs {
@@ -82010,11 +82035,11 @@ video {
     left: 0;
   }
 
-  .xl\:inset-auto {
-    top: auto;
-    right: auto;
-    bottom: auto;
-    left: auto;
+  .xl\:inset-1\/2 {
+    top: 50%;
+    right: 50%;
+    bottom: 50%;
+    left: 50%;
   }
 
   .xl\:inset-y-0 {
@@ -82027,14 +82052,14 @@ video {
     left: 0;
   }
 
-  .xl\:inset-y-auto {
-    top: auto;
-    bottom: auto;
+  .xl\:inset-y-1\/2 {
+    top: 50%;
+    bottom: 50%;
   }
 
-  .xl\:inset-x-auto {
-    right: auto;
-    left: auto;
+  .xl\:inset-x-1\/2 {
+    right: 50%;
+    left: 50%;
   }
 
   .xl\:top-0 {
@@ -82053,20 +82078,20 @@ video {
     left: 0;
   }
 
-  .xl\:top-auto {
-    top: auto;
+  .xl\:top-1\/2 {
+    top: 50%;
   }
 
-  .xl\:right-auto {
-    right: auto;
+  .xl\:right-1\/2 {
+    right: 50%;
   }
 
-  .xl\:bottom-auto {
-    bottom: auto;
+  .xl\:bottom-1\/2 {
+    bottom: 50%;
   }
 
-  .xl\:left-auto {
-    left: auto;
+  .xl\:left-1\/2 {
+    left: 50%;
   }
 
   .xl\:resize-none {
